--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     --indigo-9: #3730a3;
     --indigo-10: #1e1b4b;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    height: 100%;
 }
 
 body {
@@ -23,11 +23,17 @@ a {
     text-decoration: none;
 }
 
+h5 {
+    font-size: large;
+    font-weight: bold;
+}
+
 .container {
     display: grid;
     width: 100%;
+    height: 100%;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 130px 6fr;
     grid-template-areas:
         "aside header"
         "aside main";
@@ -48,10 +54,10 @@ a {
     grid-area: main;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas: 
-    "projects announcements"
-    "projects trending";
+    grid-template-rows: auto auto;
+    grid-template-areas:
+        "projects announcements"
+        "projects trending";
 }
 
 .header {
@@ -110,7 +116,8 @@ button {
     }
 
 
-    &.title, > a {
+    &.title,
+    > a {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
@@ -147,44 +154,49 @@ button {
 }
 
 .projects {
-    padding: 3vh;
+    padding: 0vh 3vh;
     grid-area: projects;
     grid: 1/1, 1/3;
+
+
+}
+
+.projects_grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-areas: 
-    "project_1 project_2"
-    "project_3 project_4"
-    "project_5 project_6";
-    gap: 1vh;
-    
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+        "project_1 project_2"
+        "project_3 project_4"
+        "project_5 project_6";
+    gap: 3vh 3vh;
 }
 
 .project p {
     font-size: calc(0.55rem + 0.8vh);
 }
 
-.project { 
+.project {
     background-color: var(--indigo-3);
-    border-radius: 10%;
-    border-color: var(--indigo-10);
-    border: 1px solid;
+    border-radius: 3%;
+    border-color: 0px solid white;
     display: grid;
     grid-template-columns: 1;
     grid-template-rows: 2fr 1fr;
-    grid-template-areas: 
-    "project_text"
-    "project_symbols";
+    padding: 0px 20px;
+    grid-template-areas:
+        "project_text"
+        "project_symbols";
+    min-height: 200px;
 
 }
 
-.project_text{
+.project_text {
     grid-area: project_text;
 
 }
 
-.project_symbols{
+.project_symbols {
     grid-area: project_symbols;
 }
 
@@ -214,8 +226,38 @@ button {
 
 .announcements {
     grid-area: announcements;
+    display: flex;
+    flex-flow: column nowrap;
+    margin-right: 2vh;
+
+}
+
+.announcements > div,
+.trending > div {
+    background-color: var(--indigo-8);
+    border-radius: 3px;
+    padding: 2vh;
+    font-size: calc(0.55rem + 0.8vh);
 }
 
 .trending {
     grid-area: trending;
+    display: flex;
+    flex-flow: column nowrap;
+    margin-right: 2vh;
+
+}
+
+.announcement,
+.trends {
+    background-color: var(--indigo-8);
+    padding: 5px;
+    margin-top: 1vh;
+    color: var(--indigo-1);
+    border-bottom: 1px solid var(--indigo-10);
+    margin-right: 2vh;
+}
+
+.announcement:last-child {
+    border-bottom: none;
 }
